# derive_into_dynamo

./: Cargo.toml  LICENSE.txt  ReadMe.md
derive_into_dynamo/: Cargo.toml
derive_into_dynamo/src/: enum_type.rs  lib.rs
derive_into_dynamo/tests/: lib.rs
src/: lib.rs
tests/: lib.rs
