[package]
name = "into_dynamo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-dynamodb = "0.24.0"
thiserror = "1.0.39"

derive_into_dynamo = { path = "derive_into_dynamo" }

[workspace]
members = [
    "derive_into_dynamo",
]
