[package]
name = "derive_into_dynamo"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
aws-sdk-dynamodb = "0.28.0"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "2.0.16", features = ["derive"] }

into_dynamo = { path = "../"}

